# DailyFinance

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: rss_sources.yaml
docs/: architecture.md  coding_guidelines.md  development_flow.md  engineering_principles.md  project_vision.md  roadmap.md
src/dailyfinance/: __init__.py  cli.py  migrate_jsonl_to_sqlite.py  process_sqlite.py  rebuild_search_index.py  refresh.py
src/dailyfinance/ai/: __init__.py
src/dailyfinance/api/: __init__.py  app.py
src/dailyfinance/collectors/: __init__.py  base.py
src/dailyfinance/collectors/market/: __init__.py  yfinance.py
src/dailyfinance/collectors/news/: __init__.py  discovery.py  mock.py  rss.py
src/dailyfinance/config/: __init__.py  recency.py  rss_sources.py
src/dailyfinance/models/: __init__.py  documents.py  processed_documents.py  search.py
src/dailyfinance/processing/: __init__.py  classification.py  entities.py  ingestion.py  pipeline.py  processed_pipeline.py  processors.py  quality.py  text.py
src/dailyfinance/storage/: __init__.py  base.py  database.py  local_jsonl.py
src/dailyfinance/utils/: __init__.py  document_ids.py
tests/: test_api_documents.py  test_cli.py  test_collectors.py  test_database_storage.py  test_health.py  test_ingestion.py  test_migrate_jsonl_to_sqlite.py  test_pipeline.py  test_process_sqlite.py  test_processed_documents_api.py  test_processed_documents_storage.py  test_processing_pipeline.py  test_refresh.py  test_rss_collector.py  test_rss_discovery.py  test_rss_sources_config.py  test_search.py  test_storage.py  test_yfinance_collector.py
