[project]
name = "dailyfinance"
version = "0.3.0"
description = "Collect, process, store, and retrieve daily financial information."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "sqlalchemy",
    "httpx",
    "feedparser",
    "pyyaml",
    "yfinance",
]

[project.scripts]
dailyfinance-ingest = "dailyfinance.cli:main"
dailyfinance-ingest-rss = "dailyfinance.cli:main"
dailyfinance-migrate-jsonl-to-sqlite = "dailyfinance.migrate_jsonl_to_sqlite:main"
dailyfinance-process-sqlite = "dailyfinance.process_sqlite:main"
dailyfinance-rebuild-search-index = "dailyfinance.rebuild_search_index:main"
dailyfinance-refresh = "dailyfinance.refresh:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
